--- a/index.html
+++ b/index.html
@@ -4,47 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RSS News Feed</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            color: #333;
-        }
-        #feed-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .feed-item {
-            background: white;
-            margin: 10px;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            width: 300px;
-            text-align: left;
-        }
-        .feed-item a {
-            text-decoration: none;
-            color: #007BFF;
-            font-weight: bold;
-        }
-        .feed-item img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .feed-item .source, .feed-item .date {
-            font-size: 0.9em;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
     <h1>Latest News on Identity & Access Management</h1>
